# seraph

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  WORK_PLAN.md  _config.yml  build.sh  clean.sh  config.sh  createinitrd.py  headers.sh  index.md  initrd.py  libstdcxx.sh  mkiso.sh  qemu.sh  run.sh  rust-toolchain.toml  rustfmt.toml  selected  test.sh  toolchain.sh
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
abi/: README.md
abi/init-protocol/: Cargo.toml  README.md
abi/init-protocol/src/: lib.rs
base/: README.md
base/allocsmoke/: Cargo.toml
base/allocsmoke/src/: main.rs
base/crasher/: Cargo.toml
base/crasher/src/: main.rs
boot/: CLAUDE.md  Cargo.toml  README.md
conf/: group  hostname  passwd
devmgr/: Cargo.toml  README.md
devmgr/docs/: hotplug.md  pci-enumeration.md
devmgr/src/: caps.rs  main.rs  pci.rs  spawn.rs
docs/: architecture.md  boot-protocol.md  build-system.md  capability-model.md  coding-standards.md  device-management.md  documentation-standards.md  ipc-design.md  memory-model.md  userspace-memory-model.md
drivers/: README.md
drivers/virtio/blk/: Cargo.toml
drivers/virtio/blk/src/: io.rs  main.rs
fs/: README.md
fs/fat/: Cargo.toml
fs/fat/src/: bpb.rs  dir.rs  fat.rs  file.rs  main.rs
init/: Cargo.toml  README.md
init/src/: bootstrap.rs  logging.rs  main.rs  service.rs  vfs.rs
init/src/arch/: mod.rs  riscv64.rs  x86_64.rs
kernel/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  symbols.py  test.py
kernel/arch/i386/: boot.S  crti.S  crtn.S  linker.ld  make.config  tty.c  vga.h
kernel/arch/i386/cpu/: gdt.S  idt.S  irq.S  isr.S  tss.S
kernel/arch/i386/mem/: mem.S
kernel/arch/i386/proc/: task.S
kernel/arch/i386/sys/: task.S
kernel/docs/: arch-interface.md  capability-internals.md  initialization.md  ipc-internals.md  memory-internals.md  scheduler.md  syscalls.md
kernel/include/kernel/: acpi.h  args.h  ata.h  bitset.h  cbuffer.h  cmos.h  elf.h  errno.h  ext2.h  fpu.h  fs.h  gdt.h  idt.h  irq.h  isr.h  kconfig.h  kernel.h  keyboard.h  lfb.h  mbr.h  mem.h  multiboot.h  pci.h  pipe.h  process.h  pty.h  ramdisk.h  random.h  serial.h  shm.h  signal.h  spinlock.h  symbols.h  syscall.h  tarfs.h  task.h  timer.h  tmpfs.h  tss.h  tty.h  (+5 more)
kernel/kernel/: args.c  bitset.c  cbuffer.c  elf.c  fs.c  isr.S  kernel.c  mem.S  pipe.c  pty.c  spinlock.c  symbols.S  symtab.S  task.S  tss.S  version.c  zero.c
kernel/kernel/cpu/: gdt.c  idt.c  irq.c  isr.c
kernel/kernel/dev/: cmos.c  fpu.c  keyboard.c  timer.c
kernel/kernel/drivers/: acpi.c  ata.c  ext2.c  keyboard.c  lfb.c  mbr.c  pci.c  ramdisk.c  random.c  terminal-font.h  tmpfs.c  ustar.c  vga.c
kernel/kernel/fs/: fs.c  null.c  pipe.c  unixpipe.c  zero.c
kernel/kernel/io/: ext2.c  keyboard.c  null.c  ramdisk.c  serial.c  tarfs.c  vga.c  zero.c
kernel/kernel/mem/: mem.c  shm.c
kernel/kernel/memory/: gdt.c
kernel/kernel/proc/: cpuinfo.c  elf.c  process.c  procfs.c  pty.c  signal.c  symbols.c  syscall.c  task.c
kernel/kernel/sys/: process.c  signal.c  symbols.c  symtab.c  syscall.c  task.c
kernel/linker/: riscv64.ld  x86_64.ld
kernel/src/: console.rs  framebuffer.rs  irq.rs  lib.rs  main.rs  percpu.rs  platform.rs  sync.rs  validate.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv64/: ap_trampoline.rs  console.rs  context.rs  cpu.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  paging.rs  sbi.rs  syscall.rs  timer.rs  trap_frame.rs
kernel/src/arch/x86_64/: ap_trampoline.rs  console.rs  context.rs  cpu.rs  gdt.rs  idt.rs  interrupts.rs  ioapic.rs  mod.rs  paging.rs  syscall.rs  timer.rs  trap_frame.rs
kernel/src/cap/: cspace.rs  derivation.rs  mod.rs  object.rs  slot.rs
kernel/src/ipc/: endpoint.rs  event_queue.rs  message.rs  mod.rs  signal.rs  wait_set.rs
kernel/src/mm/: address_space.rs  buddy.rs  heap.rs  init.rs  mod.rs  paging.rs  size_class.rs  slab.rs  tlb_shootdown.rs
kernel/src/sched/: mod.rs  run_queue.rs  thread.rs
kernel/src/syscall/: cap.rs  hw.rs  ipc.rs  mem.rs  mod.rs  sbi.rs  sysinfo.rs  thread.rs
ktest/: Cargo.toml  README.md
ktest/src/: acpi_shutdown.rs  cmdline.rs  frame_pool.rs  framebuffer.rs  main.rs  sbi_shutdown.rs  serial.rs
ktest/src/bench/: mod.rs
ktest/src/integration/: cap_delegation_chain.rs  cap_transfer.rs  memory_lifecycle.rs  mod.rs  multi_caller_ipc_fifo.rs  thread_lifecycle.rs  tlb_coherency.rs  wait_concurrency.rs
ktest/src/stress/: cap_revoke_under_use.rs  cap_tree_deep.rs  concurrent_ipc.rs  concurrent_map_unmap.rs  concurrent_signal.rs  event_queue_fill_drain.rs  mod.rs  thread_churn.rs
ktest/src/unit/: cap.rs  event.rs  hw.rs  ipc.rs  mm.rs  mod.rs  signal.rs  sysinfo.rs  thread.rs  wait_set.rs
lib/: .gitignore  Makefile
libc/: Makefile  README.md  crt0.S  entry.c  exit.c  libc.c
linker/: Makefile  linker.c  linker.ld
logd/: README.md
net/: README.md
netd/: README.md
ports/: .gitignore  clean.sh  ports.sh
procmgr/: Cargo.toml  README.md
procmgr/docs/: frame-management.md  ipc-interface.md
procmgr/src/: frames.rs  loader.rs  main.rs  process.rs
procmgr/src/arch/: mod.rs
procmgr/src/arch/riscv64/: mod.rs
procmgr/src/arch/x86_64/: mod.rs
rootfs/: README.md  boot.conf
ruststd/: README.md
sbin/: .gitignore  Makefile  init.c
script/: config.sh  default-host.sh  initrd.py
scripts/: README.md  env.sh
shared/: README.md
shared/registry/: Cargo.toml
shared/registry/src/: lib.rs
shared/runtime/: Cargo.toml  README.md
shared/runtime/src/: heap.rs  lib.rs  log.rs
svcmgr/: Cargo.toml  README.md
svcmgr/docs/: ipc-interface.md  restart-protocol.md
svcmgr/src/: main.rs  restart.rs  service.rs
svcmgr/src/arch/: mod.rs
svcmgr/src/arch/riscv64/: mod.rs
svcmgr/src/arch/x86_64/: mod.rs
targets/: README.md  riscv64gc-seraph-none.json  x86_64-seraph-none.json
toolchain/: .gitignore
toolchain-patches/: gcc.patch
vfs/: README.md
vfsd/: Cargo.toml  README.md
vfsd/docs/: namespace.md  vfs-ipc-interface.md
vfsd/src/: driver.rs  gpt.rs  main.rs  mount.rs  worker.rs
(+361 files in other folders)
