[workspace]
resolver = "2"
members = [
    "kernel",
    "boot",
    "init",
    "procmgr",
    "svcmgr",
    "devmgr",
    "vfsd",
    "drivers/virtio/core",
    "drivers/virtio/blk",
    "fs/fat",
    "abi/boot-protocol",
    "abi/syscall",
    "shared/elf",
    "shared/font",
    "shared/syscall",
    "xtask",
]

# default-members limits bare `cargo build`/`cargo run` to xtask only.
# Components targeting custom/embedded targets are built via build.sh.
default-members = ["xtask"]

[workspace.dependencies]
boot-protocol = { path = "abi/boot-protocol" }
font = { path = "shared/font" }
syscall-abi = { path = "abi/syscall" }
virtio-core = { path = "drivers/virtio/core" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 2
