[package]
name = "init"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "init"
path = "src/main.rs"
test = false

[dependencies]
init-protocol = { path = "../abi/init-protocol" }
process-abi = { path = "../abi/process-abi" }
elf = { path = "../shared/elf" }
syscall = { path = "../shared/syscall" }
syscall-abi = { path = "../abi/syscall" }

[lints]
workspace = true
