[package]
name = "procmgr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "procmgr"
path = "src/main.rs"
test = false

[dependencies]
process-abi = { path = "../abi/process-abi" }
elf = { path = "../shared/elf" }
runtime = { path = "../shared/runtime" }
syscall = { path = "../shared/syscall" }
syscall-abi = { path = "../abi/syscall" }

[lints]
workspace = true
