[package]
name = "svcmgr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "svcmgr"
path = "src/main.rs"
test = false

[dependencies]
process-abi = { path = "../abi/process-abi" }
runtime = { path = "../shared/runtime" }
syscall = { path = "../shared/syscall" }

[lints]
workspace = true
