[package]
name = "svcmgr"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "svcmgr"
path = "src/main.rs"
test = false

[dependencies]
process-abi = { path = "../abi/process-abi" }
runtime = { path = "../shared/runtime" }
ipc = { path = "../shared/ipc" }
syscall = { path = "../shared/syscall" }
syscall-abi = { path = "../abi/syscall" }

[lints]
workspace = true
