[package]
name = "init-protocol"
version = "0.1.0"
edition = "2021"
publish = false

# no_std: this crate defines the kernel-to-init handover ABI and must be
# usable in both kernel (no_std) and userspace (no_std) contexts.
[lib]
doctest = false

[dependencies]
process-abi = { workspace = true }

[lints]
workspace = true
