[package]
name = "registry"
version = "0.1.0"
edition = "2021"
publish = false

# no_std: fixed-capacity name→endpoint-cap registry used by supervisors
# (svcmgr today; devmgr/vfsd when they need it) to answer QUERY_ENDPOINT.
[lib]
test = false
doctest = false

[dependencies]

[lints]
workspace = true
