[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
publish = false

# no_std: provides _start() entry point for no_std userspace binaries.
[lib]
test = false
doctest = false

[dependencies]
ipc = { path = "../ipc" }
process-abi = { path = "../../abi/process-abi" }
syscall = { path = "../syscall" }
syscall-abi = { path = "../../abi/syscall" }

[lints]
workspace = true
