[package]
name = "virtio-blk"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "virtio-blk"
path = "src/main.rs"
test = false

[dependencies]
process-abi = { workspace = true }
runtime = { path = "../../../shared/runtime" }
syscall = { path = "../../../shared/syscall" }
syscall-abi = { path = "../../../abi/syscall" }
virtio-core = { path = "../core" }

[lints]
workspace = true
